--- a/css/default.css
+++ b/css/default.css
@@ -104,6 +104,12 @@ a {
 	text-decoration: none;
 }
 
+img {
+	width: 100%;
+	opacity: 0.5;
+	margin-bottom: 15px;
+}
+
 #read-more {
 	background-image: url("img/arrows.svg");
 	height: 25px;
@@ -150,7 +156,6 @@ a {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 200;
 	color: #00796B;
-	text-decoration: none;
 	text-decoration: none;
 	font-size: 16px;
 }
